--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   top_snackbar_flutter: ^3.1.0
   url_launcher: ^6.3.0
   scaled_app: ^2.3.0
-  js: ^0.6.0 
+  js: ^0.6.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -149,6 +149,7 @@ flutter:
       - images/bgwhite.png
       - images/bgdark.png
       - images/ringqblue.png
+      - sounds/falsering.wav
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
