--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -5,3 +5,16 @@ on:
     push:
         branches:
             - main 
+
+jobs:
+    build:
+        runs-on: ubuntu-latest
+
+        steps:
+            - name: Checkout Repository
+              uses: actions/checkout@v3
+
+            - name: Setup Flutter
+              uses: subosito/flutter-action@v2
+              with:
+                  flutter-version: '3.x'
