--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Flutter Web
 on:
     push:
         branches:
-            - master 
+            - master
 
 jobs:
     build:
@@ -33,14 +33,20 @@ jobs:
                   name: flutter-web-build
                   path: build/web
 
+            - name: Check Secrets (for Debugging)
+              run: |
+                echo "VPS_HOST: ${{ secrets.VPS_HOST }}"
+                echo "VPS_USER: ${{ secrets.VPS_USER }}"
+              # This is for debugging purposes; remove this step after confirming secrets are correct
+
             - name: Synchronize Files To Server
               uses: easingthemes/ssh-deploy@v2.1.5
               env:
-                SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+                SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}  # SSH private key from GitHub Secrets
                 SOURCE: "build/web/*"  # Path to the build output files
-                REMOTE_HOST: ${{ secrets.VPS_HOST }}
-                REMOTE_USER: ${{ secrets.VPS_USER }}
-                TARGET: "/var/www/ringq_click2call"  # Path to the target directory on your server
+                REMOTE_HOST: ${{ secrets.VPS_HOST }}  # Server IP/hostname
+                REMOTE_USER: ${{ secrets.VPS_USER }}  # SSH user (e.g., ubuntu or root)
+                TARGET: "/var/www/ringq_click2call"  # Target directory on the server
 
             - name: Set Correct Permissions
               uses: appleboy/ssh-action@v0.1.6
